# coolbpf

./: .gitignore  .gitmodules  0001-lcc-Add-golcc-compile.patch  CMakeLists.txt  README.md  README_ch.md  build.sh  coolbpf_handbook.md  install.sh  uninstall.sh
.github/workflows/: lwcb.yml
btf/: CMakeLists.txt  Readme.md
btf/btfhive/: getFuncs.py  getVmlinux.py  main.py  (+4 more)
docs/: Doxyfile  Makefile  api.rst  api_bpf.rst  api_usr.rst  conf.py  index.rst  localcompile.md
lcc/: CMakeLists.txt
lcc/clcc/example/: CMakeLists.txt  example.bpf.c  example.c  example.h
lcc/glcc/: CMakeLists.txt  README.md
lcc/glcc/lib/ebpf/: Makefile  allsyms.c  allsyms.h  arraymap.c  bpf_frame.h  bpf_jit.S  bpf_jit_comp.c  bpf_trace.c  bpf_verifier.h  core.c  disasm.c  disasm.h  ebpf.c  ebpf.h  ebpf_kprobe.c  ebpf_kprobe.h  ebpf_tracepoint.c  ebpf_tracepoint.h  hashtab.c  helpers.c  map_in_map.c  nospec-branch.h  readme.md  stackmap.c  tnum.c  trace_bpf_jit.S  trace_bpf_jit_comp.c  verifier.c
lcc/glcc/lib/ebpf/linux/: bpf.h  bpf_perf_event.h  bpf_types.h  config.h  filter.h  list_nulls.h  nospec.h  rbtree_latch.h  rculist_nulls.h
lcc/glcc/lib/ebpf/uapi/linux/: bpf.h  filter.h
lcc/glcc/lib/hook/: CMakeLists.txt  hook.c  hook.h
lcc/glcc/lib/ringbuffer/: Makefile  main.c  ringbuffer.c
lcc/rlcc/example/: Cargo.toml  build.rs
lcc/rlcc/example/src/bpf/: example.bpf.c  example.h  vmlinux.h
lcc/rlcc/example/src/bpf/.output/: bindings.rs  example.skel.rs
lwcb/: Cargo.toml  rustfmt.toml
lwcb/.env/: pip-selfcheck.json
lwcb/blang/: Cargo.toml
lwcb/blang/src/: blang.rs  btf.rs  call.rs  constant.rs  lexer.rs  lib.rs  parser.rs  print.rs
lwcb/blang/src/passes/: bpfir.rs  mod.rs  printer.rs  typecheck.rs  unfold.rs
lwcb/blang/tests/: test_bpfir.rs
lwcb/blang/tests/cbscript/: empty.cb  map.cb
lwcb/blang/tests/files/: binary_add.cb  binary_div.cb  binary_mul.cb  binary_sub.cb  call_print.cb  empty.cb  if_empty.cb  if_then.cb  if_then_else.cb  map.cb  member_complex.cb  member_simple.cb  relation_eq.cb  relation_gt.cb  relation_gte.cb  relation_lt.cb  relation_lte.cb  relation_neq.cb  unary_neg.cb
lwcb/bpfir/: Cargo.toml
lwcb/bpfir/src/: bblock.rs  cfg.rs  func.rs  lib.rs  mir.rs  module.rs  object.rs  types.rs  value.rs
lwcb/bpfir/src/be/: clif.rs  codegen.rs  isel.rs  mod.rs  object.rs  regalloc.rs  spec.rs
lwcb/btfparse/: Cargo.toml
lwcb/btfparse/src/: btf.rs  func_map.rs  lib.rs  main.rs
lwcb/btfparse/src/types/: array.rs  const_.rs  datasec.rs  decltag.rs  enum64.rs  enum_.rs  float.rs  func.rs  func_proto.rs  fwd.rs  int.rs  mod.rs  ptr.rs  restrict.rs  struct_.rs  typedef.rs  typetag.rs  union.rs  var.rs  volatile.rs
lwcb/libfirm-rs/: Cargo.toml
lwcb/libfirm-rs/src/: entity.rs  graph.rs  ident.rs  lib.rs  mode.rs  node.rs  relation.rs  tarval.rs  types.rs
lwcb/libfirm-sys/: Cargo.toml  build.rs  wrapper.h
lwcb/libfirm-sys/libfirm/: Makefile
lwcb/libfirm-sys/libfirm/include/libfirm/: be.h  irnode.h
lwcb/libfirm-sys/libfirm/ir/be/: bearch.h  bemain.c  bemodule.c  bestack.c  isas.h  platform.c  target.c
lwcb/libfirm-sys/libfirm/ir/be/bpf/: bpf_bearch.c  bpf_bearch_t.h  bpf_cconv.c  bpf_cconv.h  bpf_emitter.c  bpf_emitter.h  bpf_finish.c  bpf_insn.h  bpf_new_nodes.c  bpf_new_nodes.h  bpf_new_nodes_t.h  bpf_nodes_attr.h  bpf_spec.pl  bpf_transform.c  bpf_transform.h
lwcb/libfirm-sys/libfirm/ir/ir/: irnode.c  irnode_t.h
lwcb/libfirm-sys/libfirm/ir/tr/: type.c
lwcb/pylwcb/: Cargo.toml  devbuild.sh
lwcb/pylwcb/src/: lib.rs
lwcb/scripts/: dockerbuild.sh  gen_svg.sh
lwcb/scripts/yComp-1.3.19/: ycomp  ycomp.cmd
lwcb/src/: btf.rs  builtin_function.rs  cmacro.rs  context.rs  gperf.rs  gstack.rs  kallsyms.rs  lib.rs  lwcb.rs  main.rs  perf_event.rs  symbol.rs  tracepoint.rs  types.rs
lwcb/src/ast/: ast.rs  attr.rs  mod.rs  nodeid.rs  parser.rs  print.rs  typer.rs  visit.rs
lwcb/src/bpf/: mod.rs
lwcb/src/bpf/map/: hash.rs  layout.rs  map.rs  mod.rs  perf.rs  perfbuffer.rs  stack.rs
lwcb/src/bpf/program/: kprobe.rs  mod.rs  program.rs  tracepoint.rs
lwcb/src/builtin/: builtin.rs  kbuiltin.rs  mod.rs  printer.rs  ubuiltin.rs
lwcb/src/event/: event.rs  mod.rs  perf.rs  printer.rs  stringify.rs
lwcb/src/firm/: builtin.rs  entity.rs  frame.rs  global.rs  helper.rs  ir_type.rs  map.rs  mod.rs  program.rs  symbol.rs  target.rs  types.rs
lwcb/src/newast/: ast.rs  mod.rs  nodeid.rs  parser.rs  typer.rs
lwcb/src/token/: mod.rs  token.rs  tokens.rs
lwcb/src/types/: mod.rs  pt_regs.rs  types.rs
lwcb/src/utils/: align.rs  btf.rs  kernel_version.rs  mod.rs  tcpflags.rs  tcpstate.rs  timestr.rs  tracepoint.rs  tstamp.rs
lwcb/tests/scripts/: bswap_ntop.cb  cast.cb  kstack.cb  multi.cb  ns.cb  ntop.cb  retval.cb  tcpflags.cb  tcphdr.cb  tcpstate.cb  timestr.cb
pkg/coolbpf-rs/coolbpf-builder/: Cargo.toml
pkg/coolbpf-rs/coolbpf-builder/src/: lib.rs
pkg/coolbpf-rs/coolbpf-rs/: Cargo.toml
pkg/coolbpf-rs/coolbpf-rs/src/: coolbpf.rs  error.rs  exporter.rs  lib.rs  logger.rs
pkg/coolbpf-rs/coolbpf-rs/src/helper/: mod.rs  net.rs
pkg/coolbpf-rs/examples/tcpconnect/: Cargo.toml  build.rs
pkg/coolbpf-rs/examples/tcpconnect/src/: main.rs
pkg/coolbpf-rs/examples/tcpconnect/src/bpf/: tcpconnect.bpf.c  tcpconnect.h
scripts/: coolbpf.spec  gen_object.sh
src/: CMakeLists.txt  Makefile  bpf_core.h  btfparse.c  btfparse.h  coolbpf.c  coolbpf.h  coolbpf.pc.in  coolbpf.pc.template  coolbpf_bpf.h  coolbpf_common.h  fastksym.c  fastksym.h  kallsyms.c  kallsyms.h  log.c  log.h  net.c  net.h
src/bpf/: CMakeLists.txt  net.bpf.c
test/: Readme.md
test/lcctest/: Cargo.toml
test/lcctest/src/: config.rs  host.rs  main.rs
tests/: CMakeLists.txt  bpf_core.c  testapi.c  testbpf.c  testbtfparse.c
tests/bpf/: CMakeLists.txt  bpf_core.bpf.c  test.bpf.c  test_map.bpf.c
third/: CMakeLists.txt
third/libbpf/include/bpf/: libbpf.h
third/libbpf/include/linux/: filter.h
third/libbpf/include/uapi/linux/: bpf.h  pkt_cls.h
third/libbpf/src/: Makefile  bpf.c  bpf_drv.c  bpf_drv.h  btf.c  btf_dump.c  libbpf.c  libbpf_internal.h
tools/: CMakeLists.txt
(+137 files in other folders)
