[package]
name = "lwcb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
generational-arena = "0.2.9"
blang = { path = "blang" }
bpfir = { path = "bpfir" }
anyhow = "1.0.57"
log = "0.4.14"
structopt = "0.3.26"
env_logger = "0.10.0"
libbpf-sys = "1.2.1"
libbpf-rs = "0.21.2"


[workspace]
members = ["blang", "bpfir"]
