[package]
name = "blang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.12.1"
anyhow = "1.0.57"
log = "0.4.20"
generational-arena = "0.2.9"
libbpf-sys = "1.2.1"
libbpf-rs = "0.21.2"
paste = "1.0.14"
bpfir = { path = "../bpfir" }
cranelift-frontend = "0.99.1"
cranelift-codegen = { version = "0.99.1", features = ["riscv64", "arm64"] }
cranelift-module = "0.99.2"
byteorder = "1.4.3"
