[package]
name = "bpfir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
generational-arena = "0.2.9"
paste = "1.0.14"
logos = "0.12.1"
regalloc2 = "0.9.2"
libbpf-sys = "1.2.1"
libbpf-rs = "0.21.2"
anyhow = "1.0.57"
log = "0.4.20"
object = { version = "0.32.1", features = ["write"] }
