[package]
name = "bpfir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
generational-arena = "0.2.9"
paste = "1.0.14"
logos = "0.12.1"
regalloc2 = { version = "0.9.2", features = ["trace-log"] }
libbpf-sys = "1.2.1"
libbpf-rs = "0.21.2"
anyhow = "1.0.57"
log = "0.4.20"
object = { version = "0.32.1", features = ["write"] }
cranelift-frontend = "0.99.1"
cranelift-codegen = { version = "0.99.1", features = ["riscv64"] }
target-lexicon = "0.12.11"
parse-display = "0.8.2"
cranelift-module = "0.99.2"

[dev-dependencies]
cranelift-reader = "0.99.2"
