[package]
name = "lcctest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ssh2 = "0.9"
anyhow = "1.0.57"
log = "0.4.14"
serde = "1.0"
serde_derive = "1.0.32"
toml = "0.5"
structopt = "0.3.26"
env_logger = "0.9.0"