[package]
name = "example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libbpf-rs = "0.17"
libbpf-sys = { version = "0.6.1-2" }
log = "0.4.14"
libc = "0.2.125"
anyhow = "1.0.57"
structopt = "0.3.26"
once_cell = "1.8.0"
crossbeam-channel = "0.5"
nix = "0.22"
env_logger = "0.9.0"
regex = "1.5"
clearscreen = "1.0.9"
strum = "0.24"
strum_macros = "0.24"
chrono = "0.4.19"
byteorder = "1.4.3"


[build-dependencies]
libbpf-cargo = "0.11.0"
bindgen = "0.59.2"