[package]
name = "coolbpf-builder"
version = "0.1.0"
edition = "2021"
description = "coolbpf builder of bpf programs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libbpf-cargo = { path = "../libbpf-rs/libbpf-cargo" }
bindgen = "0.60.1"
anyhow = "1.0.70"
