[package]
name = "coolbpf-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
libbpf-rs = { path = "../libbpf-rs/libbpf-rs" }
log = "0.4.17"
thiserror = "1.0.40"
libbpf-sys = { version = "1.0.3" }
crossbeam-channel = "0.5.8"
metrics = "0.20.1"
metrics-exporter-prometheus = "0.11.0"